fix: recover search field of transactions on sudt detail page
Recover the search field which is mistakenly hidden by
https://github.com/Magickbase/ckb-explorer-frontend/commit/2c1ac6c32ddcf5cb5b8de9080f202614db7f14cb

--- a/src/pages/SimpleUDT/styles.module.scss
+++ b/src/pages/SimpleUDT/styles.module.scss
@@ -26,14 +26,8 @@
 }
 
 .searchAndfilter {
-  // hide the filter icon until the api is ready
-  display: none;
   align-items: center;
 
-  > div {
-    display: flex;
-    align-items: center;
-  }
   > div:last-child {
     margin-left: 8px;
   }
@@ -43,8 +37,8 @@
 }
 
 .typeFilter {
-  display: flex;
-  align-items: center;
+  // hide the filter icon until the api is ready
+  display: none;
   cursor: pointer;
   padding-left: 0.8rem;
   svg {
